# dbt-mcp-example

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.changes/: v0.2.20.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.6.1.md  v0.6.2.md  v0.7.0.md  v0.8.0.md  v0.8.1.md  v0.8.3.md
.changes/unreleased/: Bug Fix-20250725-091731.yaml  Bug Fix-20250805-061726.yaml  Bug Fix-20250813-105549.yaml  Bug Fix-20250814-221718.yaml  Bug Fix-20250916-100312.yaml  Bug Fix-20250917-010915.yaml  Bug Fix-20250922-163910.yaml  Enhancement or New Feature-20250724-194603.yaml  Enhancement or New Feature-20250726-053207.yaml  Enhancement or New Feature-20250730-202622.yaml  Enhancement or New Feature-20250801-201652.yaml  Enhancement or New Feature-20250804-152555.yaml  Enhancement or New Feature-20250811-204758.yaml  Enhancement or New Feature-20250813-070837.yaml  Enhancement or New Feature-20250815-170338.yaml  Enhancement or New Feature-20250819-193401.yaml  Enhancement or New Feature-20250827-051408.yaml  Enhancement or New Feature-20250827-155713.yaml  (+48 more)
.github/: pull_request_template.md
.task/checksum/: d2
dbt-mcp/: .tool-versions  CHANGELOG.md
dbt-mcp/examples/remote_mcp/: pyproject.toml
docs/: diagram.d2
openai_agents/: README.md  dbt_ai_agent.py  debug_tools.py  improvement_plan.md  instructions.json  setup.sh  simple_test.py  test_dbt_connection.py  test_improvements.py
tests/: env_vars.py
ui/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+119 files in other folders)
